--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
@@ -99,7 +99,9 @@
                                         @Html.LabelFor(x => x.InstituteCode, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.InstituteCode, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.InstituteCode)
-                                    </div> 
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.OfficeType, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", officetypedropdown)
