GMSD-217: ORG - "Short Name" field does not have an asterisk (*) to indicate it is mandatory

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/_List.cshtml
@@ -20,7 +20,7 @@
                         <tr>
                             <td>@item.RegionName</td>
                             <td>@item.ShortName</td>
-                            <td>@item.GeneralCountryMasterId</td>
+                                    <td>@item.CountryName</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
                             </td>
