--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralRegionMaster/CreateEdit.cshtml
@@ -54,7 +54,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ShortName, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.ShortName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.ShortName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.ShortName)
                                     </div>
