--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentre/CreateEdit.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     string css = Model.OrganisationCentreMasterId > 0 ? "col-lg-10" : "col-lg-12";
-    DropdownViewModel officetypedropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.RegionalOffice.ToString(), DropdownName = "OfficeType", DropdownSelectedValue = Convert.ToString(Model.OfficeType), IsDisabled = Model.OrganisationCentreMasterId > 0 };
+    DropdownViewModel officetypedropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.RegionalOffice.ToString(), DropdownName = "HoCoRoScFlag", DropdownSelectedValue = Convert.ToString(Model.HoCoRoScFlag), IsDisabled = Model.OrganisationCentreMasterId > 0 };
 
 
 }
@@ -38,6 +38,19 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.OrganisationCentreMasterId)
+                            <div class="col-lg-4">
+                                <div class="mb-3">
+                                    @Html.LabelFor(x => x.OrganisationId, new { @class = "form-label required" })
+                                    @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
+                           {
+                               DropdownType = DropdownTypeEnum.Organisation.ToString(),
+                               DropdownName = "OrganisationId",
+                               DropdownSelectedValue = Model.OrganisationCentreMasterId
+                                .ToString()
+                           })
+                                    @Html.ValidationMessageFor(x => x.OrganisationId)
+                                </div>
+                            </div>
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
@@ -62,6 +75,17 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
+                                        @Html.LabelFor(x => x.OfficeType, new { @class = "form-label required" })
+                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", officetypedropdown)
+                                        @Html.ValidationMessageFor(x => x.HoCoRoScFlag)
+                                        @if (Model.OrganisationCentreMasterId > 0)
+                                        {
+                                            @Html.HiddenFor(x => x.HoCoRoScFlag)
+                                        }
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreLoginNumber, new { @class = "form-label" })
                                         @Html.TextBoxFor(x => x.CentreLoginNumber, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.CentreLoginNumber)
@@ -74,19 +98,7 @@
                                         @Html.ValidationMessageFor(x => x.CentreSpecialization)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.OrganisationId, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
-                               {
-                                   DropdownType = DropdownTypeEnum.Organisation.ToString(),
-                                   DropdownName = "OrganisationId",
-                                   DropdownSelectedValue = Model.OrganisationCentreMasterId
-                                    .ToString()
-                               })
-                                        @Html.ValidationMessageFor(x => x.OrganisationId)
-                                    </div>
-                                </div>
+                                
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CentreEstablishmentDatetime, new { @class = "form-label" })
@@ -101,13 +113,7 @@
                                         @Html.ValidationMessageFor(x => x.InstituteCode)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.OfficeType, new { @class = "form-label required" })
-                                        @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", officetypedropdown)
-                                        @Html.ValidationMessageFor(x => x.HoCoRoScFlag)
-                                    </div>
-                                </div>
+
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Url, new { @class = "form-label" })
@@ -215,7 +221,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Pincode, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.Pincode, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.Pincode, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.Pincode)
                                     </div>
                                 </div>
@@ -236,7 +242,7 @@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.CellPhone, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.CellPhone, new { @class = "form-control" })
+                                        @Html.TextBoxFor(x => x.CellPhone, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.CellPhone)
                                     </div>
                                 </div>
