--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMDeviceMaster/CreateEdit.cshtml
@@ -31,35 +31,35 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DeviceName, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.DeviceName, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.DeviceName, new { @class = "form-label required"})
+                                        @Html.TextBoxFor(x => x.DeviceName, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.DeviceName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DeviceSerialCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.DeviceSerialCode, new { @class = "form-label required"})
                                         @if (Model.DBTMDeviceMasterId > 0)
                                         {
-                                            @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control", @readonly = "readonly" })
+                                            @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control", @readonly = "readonly"})
                                         }
                                         else
                                         {
-                                            @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control" })
+                                            @Html.TextBoxFor(x => x.DeviceSerialCode, new { @class = "form-control"})
                                         }
                                         @Html.ValidationMessageFor(x => x.DeviceSerialCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.ManufacturedBy, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.ManufacturedBy, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.ManufacturedBy, new { @class = "form-label"})
+                                        @Html.TextBoxFor(x => x.ManufacturedBy, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.ManufacturedBy)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DBTMDeviceStatus, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.DBTMDeviceStatus, new { @class = "form-label required"})
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.StatusEnumId.ToString(),
@@ -71,45 +71,45 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.RegistrationDate, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.RegistrationDate, new { @class = "form-label required"})
                                         @Html.TextBoxFor(x => x.RegistrationDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.RegistrationDate)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.WarrantyExpirationPeriodInMonth, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.WarrantyExpirationPeriodInMonth, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.WarrantyExpirationPeriodInMonth, new { @class = "form-label required"})
+                                        @Html.TextBoxFor(x => x.WarrantyExpirationPeriodInMonth, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.WarrantyExpirationPeriodInMonth)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AdditionalFeatures, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.AdditionalFeatures, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.AdditionalFeatures, new { @class = "form-label"})
+                                        @Html.TextBoxFor(x => x.AdditionalFeatures, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.AdditionalFeatures)
                                     </div>
                                 </div>
                                 <div class="col-lg-8">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.Description, new { @class = "form-label" })
-                                        @Html.TextAreaFor(x => x.Description, new { @class = "form-control" })
+                                        @Html.LabelFor(x => x.Description, new { @class = "form-label"})
+                                        @Html.TextAreaFor(x => x.Description, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.Description)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsMasterDevice, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.IsMasterDevice, new { @class = "form-label"})
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsMasterDevice, new { @class = "form-check-input" })
+                                            @Html.CheckBoxFor(x => x.IsMasterDevice, new { @class = "form-check-input"})
                                         </div>
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.IsActive, new { @class = "form-label"})
                                         <div class="form-check">
-                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input"})
                                         </div>
                                     </div>
                                 </div>
