--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/_List.cshtml
@@ -46,8 +46,8 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center data-action">
-                                <a href="../@controllerName/UpdateDBTMTraineePersonalDetails?dBTMTraineeDetailId=@item.DBTMTraineeDetailId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?dBTMTraineeDetailIds=@item.DBTMTraineeDetailId&SelectedCentreCode=@Model.SelectedCentreCode" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/UpdateDBTMTraineePersonalDetails?dBTMTraineeDetailId=@item.DBTMTraineeDetailId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>@*<span class="m-2">|</span> *@
+                                @* <a href="../@controllerName/Delete?dBTMTraineeDetailIds=@item.DBTMTraineeDetailId&SelectedCentreCode=@Model.SelectedCentreCode" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
                     }
