GMSD-90: EMP - Dropdown arrows missing from dropdown fields, making it unclear that selection is required.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/AssociateUnAssociateAdminRoleToUser.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/AssociateUnAssociateAdminRoleToUser.cshtml
@@ -44,11 +44,11 @@
                                         @Html.LabelFor(x => x.EmployeeId, new { @class = "form-label required" })
                                         @if (Model.AdminRoleApplicableDetailId > 0)
                                         {
-                                            @Html.DropDownList("EmployeeId", ViewData["EmployeeList"] as List<SelectListItem>, new { @class = "form-control", @readonly = "readonly" })
+                                            @Html.DropDownList("EmployeeId", ViewData["EmployeeList"] as List<SelectListItem>, new { @class = "form-select", @readonly = "readonly" })
                                         }
                                         else
                                         {
-                                            @Html.DropDownList("EmployeeId", ViewData["EmployeeList"] as List<SelectListItem>, new { @class = "form-control" })
+                                            @Html.DropDownList("EmployeeId", ViewData["EmployeeList"] as List<SelectListItem>, new { @class = "form-select" })
                                         }
                                         @Html.ValidationMessageFor(x => x.EmployeeId)
                                     </div>
